# mismatch

./: LICENSE  MANIFEST.in  README.md  notebook.ipynb  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
simulated_data/: custom_labels.csv  simulated_DKT_TN_data_with_cov.csv  simulated_data_BrainCOLOR_ROI_names.csv  simulated_data_BrainCOLOR_label_names.csv
simulated_data/crashs/: simulated_biomarkers.csv  simulated_input_trace.csv  simulated_manifest_left.csv  simulated_manifest_right.csv  simulated_ptau217.csv  template_shoot_left.vtk  template_shoot_right.vtk
simulated_data/crashs/sub1/crashs/crashs_right/: sub1_2025-01-01_right_template_thickness.vtk
simulated_data/crashs/sub2/crashs/crashs_left/: sub2_2025-01-01_left_template_thickness.vtk
simulated_data/crashs/sub3/crashs/crashs_right/: sub3_2025-01-01_right_template_thickness.vtk
simulated_data/crashs/sub4/crashs/crashs_left/: sub4_2025-01-01_left_template_thickness.vtk
simulated_data/crashs/sub5/crashs/crashs_left/: sub5_2025-01-01_left_template_thickness.vtk
simulated_data/crashs/sub5/crashs/crashs_right/: sub5_2025-01-01_right_template_thickness.vtk
src/mismatch/: AssignGroup.py  AssignGroup_old.py  MTLSuperPoints copy.py  MTLSuperPoints.py  TNMismatchClustering copy.py  TNMismatchClustering.py  TNMismatchClustering_old.py  __main__.py
src/mismatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mismatch/adni_reference/: adni_cluster_centroids.csv  adni_model_coefficients.csv  adni_residual_sd.csv  left_partition_membership.npy
tests/: ADNI_A_pos_braincolor.csv  test_basic.py
