[metadata]
name = mismatch
version = 0.1.0
description = Mismatch clustering for tau and neurodegeneration residuals in Alzheimer's Disease
author = Xueying Lyu
license = MIT

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.8
install_requires =
    pandas
    numpy
    statsmodels
    scikit-learn
    scipy
    matplotlib
    seaborn
    nibabel
